# spbpu_sdt_music_project

./: .python-version  README.md  pyproject.toml
Data Sources/: Description.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
