[tool.poetry]
name = "spbpu-sdt-music-project"
version = "0.1.0"
description = "teacher's training project for studying"
authors = ["Nikita Kudriashov"]
readme = "README.md"
packages = [{include = "spbpu_sdt_music_project"}]

[tool.poetry.dependencies]
python = "3.10.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
numpy = "^1.24.0"
missingno = "^0.5.1"
sklearn = "^0.0.post1"
catboost = "^1.1.1"
pyyaml = "^6.0"
scikit-learn = "^1.2.0"
nbformat = "^5.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
